# nosh

./: .gitignore  .travis.yml  CMakeLists.txt  NoshBuildTreeSettings.cmake.in  NoshConfig.cmake.in  NoshConfigVersion.cmake.in  README.md  TODO  cmake-system.txt.default  cmake-system.txt.wave  cpplint.sh  format.sh
examples/bratu/: CMakeLists.txt  bratu.cpp  bratu.py
examples/continuation/: CMakeLists.txt  MyScalarField.cpp  MyScalarField.hpp  continuation.cpp
examples/different-materials/: CMakeLists.txt  different-materials.cpp  different-materials.py
examples/diffusion-convection/: CMakeLists.txt  diff-conv.cpp  diff-conv.hpp  diff-conv.py
examples/eigensolver/: CMakeLists.txt  eigensolver.cpp  eigensolvers.cpp
examples/exampleCalls/: CMakeLists.txt  exampleCalls.cpp
examples/neumann-boundary/: CMakeLists.txt  neumann-boundary.cpp  neumann-boundary.py
examples/poisson/: CMakeLists.txt  poisson.cpp  poisson.py
examples/singular-perturbation/: CMakeLists.txt  singular.cpp  singular.py
executables/eigensolver/: CMakeLists.txt  eigensolver.cpp
executables/exampleCalls/: CMakeLists.txt  exampleCalls.cpp
executables/linear-solve-test/: CMakeLists.txt  jacobian-solver.cpp  keo-aztecoo.cpp  keo-belos.cpp  keo-solver.cpp  linear-solve-test.cpp
executables/nosh-cont/: CMakeLists.txt  MyScalarField.cpp  MyScalarField.hpp  nosh-cont.cpp
executables/nox/: CMakeLists.txt  glNoxHelpers.cpp  glNoxHelpers.h  main.cpp  noxWithModelEvaluator.cpp
executables/oneParameterContinuation/: CMakeLists.txt  oneParameterContinuation.cpp  opcWithModelEvaluator.cpp
executables/piro-driver/: CMakeLists.txt  piro-driver-fvm-epetra.cpp  piro-driver-fvm.cpp  piro-driver.cpp
ginla/: CMakeLists.txt
ginla-fdm/: CMakeLists.txt
ginla-fdm/doc/: Doxyfile
ginla-fdm/src/: Ginla_FDM_Operator_BCInner.h  Ginla_FDM_Perturbation_Quadrants.cpp  Ginla_IO_NoxObserver.h  Ginla_IO_SaveNewtonData.cpp  Ginla_IO_StateWriter.cpp  Ginla_MagneticVectorPotential_Virtual.h  Ginla_MagneticVectorPotential_Y.cpp  Ginla_State_Virtual.h  Ginla_StatusTest_Energy.h  Ginla_StatusTest_ParameterLimits.h  Ginla_Typedefs.h
ginla-fdm/src-recti/: Recti_Domain_Factory.h  Recti_Domain_Polygon.h  Recti_Grid_Square.cpp  Recti_Grid_Square.h  Recti_Grid_Uniform.h
ginla-fdm/src-vio/: VIO_EpetraMesh_Reader.h  VIO_Image_Writer_Abstract.h  VIO_Reader_Abstract.h  VIO_TpetraMesh_Writer.h  VIO_Typedefs.h
ginla/examples/: CMakeLists.txt
ginla/src/: CMakeLists.txt  Ginla_CsvWriter.cpp  Ginla_CsvWriter.hpp  Ginla_EpetraFVM_JacobianOperator.cpp  Ginla_EpetraFVM_JacobianOperator.hpp  Ginla_EpetraFVM_KeoFactory.cpp  Ginla_EpetraFVM_KeoFactory.hpp  Ginla_EpetraFVM_KeoPreconditioner.cpp  Ginla_EpetraFVM_KeoPreconditioner.hpp  Ginla_EpetraFVM_ModelEvaluator.cpp  Ginla_EpetraFVM_ModelEvaluator.hpp  Ginla_EpetraFVM_State.cpp  Ginla_EpetraFVM_State.hpp  Ginla_Helpers.cpp  (+50 more)
libgl/: AbstractStateWriter.h  CMakeLists.txt  Doxyfile  GlKomplex.cpp  GlKomplex.h  GlSystemWithConstraint.cpp  GlSystemWithConstraint.h  Grid.cpp  Grid.h  GridReader.cpp  GridReader.h  GridSquare.cpp  GridSquare.h  GridUniformSquare.cpp  GridUniformSquare.h  GridUniformVirtual.cpp  GridUniformVirtual.h  GridVirtual.cpp  GridVirtual.h  MagneticVectorPotential.cpp  MagneticVectorPotential.h  aGrid.cpp  aGrid.h  domainRectangle.cpp  eigenSaver.cpp  eigenSaver.h  ginzburgLandau.cpp  ginzburgLandau.h  glBoundaryConditionsCentral.cpp  glBoundaryConditionsCentral.h  glBoundaryConditionsInner.cpp  glBoundaryConditionsInner.h  glBoundaryConditionsOuter.cpp  glBoundaryConditionsOuter.h  glBoundaryConditionsVirtual.cpp  glBoundaryConditionsVirtual.h  glException.cpp  glException.h  glPrePostOperator.cpp  glPrePostOperator.h  (+23 more)
libio/: CMakeLists.txt  IoVtkStructuredPoints.cpp  IoVtkStructuredPoints.h  ioException.cpp  ioException.h  ioFactory.cpp  ioVirtual.cpp  ioVirtual.h  ioVti.cpp  ioVti.h  ioVtk.cpp  ioVtk.h  ioXdmf.cpp  ioXdmf.h
loca/: CMakeLists.txt  LOCA_Stepper.C  gl-loca.cpp  input.xml
main/: CMakeLists.txt  main.cpp
nox/: CMakeLists.txt  gl-nox.cpp  glNox.cpp  glNox.h  glNoxHelpers.cpp  glNoxHelpers.h  main.cpp
paracont/: CMakeLists.txt  gl-paracont.cpp  task.xml
pseudo-timestepping/: CMakeLists.txt  pseudo-ts.cpp  pseudots.cpp
scalability-tests/: CMakeLists.txt  scalability-tests.cpp  strong-scaling-dotproduct.cpp
src/: CMakeLists.txt  Constant.hpp  CsvWriter.cpp  CsvWriter.hpp  Cuantico_CsvWriter.cpp  Cuantico_CsvWriter.hpp  Cuantico_Helpers.cpp  Cuantico_Helpers.hpp  Cuantico_JacobianOperator.cpp  Cuantico_JacobianOperator.hpp  Cuantico_KeoContainer.cpp  Cuantico_KeoContainer.hpp  Cuantico_KeoRegularized.cpp  Cuantico_KeoRegularized.hpp  Cuantico_MagneticVectorPotential_ConstantField.cpp  Cuantico_MagneticVectorPotential_ConstantField.hpp  Cuantico_MagneticVectorPotential_ExplicitValues.cpp  Cuantico_MagneticVectorPotential_ExplicitValues.hpp  Cuantico_MagneticVectorPotential_Virtual.cpp  Cuantico_MagneticVectorPotential_Virtual.hpp  Cuantico_ModelEvaluator.cpp  Cuantico_ModelEvaluator.hpp  Cuantico_NoxObserver.cpp  Cuantico_NoxObserver.hpp  Cuantico_SaveEigenData.cpp  Cuantico_SaveEigenData.hpp  Cuantico_ScalarPotential_Constant.cpp  Cuantico_ScalarPotential_Constant.hpp  Cuantico_ScalarPotential_Virtual.cpp  Cuantico_ScalarPotential_Virtual.hpp  Cuantico_State.cpp  Cuantico_State.hpp  Cuantico_StkMesh.cpp  Cuantico_StkMesh.hpp  Cuantico_StkMeshReader.cpp  Cuantico_StkMeshReader.hpp  Cuantico_config.h  DirichletBC.hpp  DirichletBCConst.hpp  DirichletBoundaryConditions.hpp  (+201 more)
test/: CMakeLists.txt  Cuantico_ComputeFUnitTests.cpp  Cuantico_EdgeCacheTests.cpp  Cuantico_IOTests.cpp  Cuantico_JacUnitTests.cpp  Cuantico_KeoUnitTests.cpp  Cuantico_StkMeshTests.cpp  Cuantico_dfdpUnitTests.cpp  Nosh_ComputeFUnitTests.cpp  Nosh_EdgeCacheTests.cpp  Nosh_IOTests.cpp  Nosh_JacUnitTests.cpp  Nosh_KeoUnitTests.cpp  Nosh_MeshTests.cpp  Nosh_StkMeshTests.cpp  Nosh_dfdpUnitTests.cpp  compute_f.cpp  dfdp.cpp  edge_cache.cpp  io.cpp  jac.cpp  keo.cpp  main.cpp  mesh.cpp  unitTestMain.cpp
turning-point-continuation/: CMakeLists.txt  glTurningPointContinuation.cpp
(+418 files in other folders)
