FIND_PACKAGE(Trilinos REQUIRED)
INCLUDE_DIRECTORIES( ${Trilinos_INCLUDE_DIRS}
                     ${Trilinos_TPL_INCLUDE_DIRS} )

FILE(GLOB nosh_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
FILE(GLOB nosh_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/*.hpp")

ADD_LIBRARY(nosh
            ${nosh_SRCS})

SET_TARGET_PROPERTIES(nosh PROPERTIES PUBLIC_HEADER "${nosh_HEADERS}") 

# Installation of the program
INSTALL(TARGETS nosh
  DESTINATION "lib"
  # IMPORTANT: Add the nosh library to the "export-set"
  EXPORT NoshLibraryDepends
  RUNTIME DESTINATION "${INSTALL_BIN_DIR}" COMPONENT bin
  LIBRARY DESTINATION "${INSTALL_LIB_DIR}" COMPONENT shlib
  PUBLIC_HEADER DESTINATION "${INSTALL_INCLUDE_DIR}" COMPONENT dev)
  #PUBLIC_HEADER DESTINATION "${INSTALL_INCLUDE_DIR}/nosh" COMPONENT dev)
